GNOME Bugzilla – Bug 637425
[PATCH] fix icon canvas item accessibility
Last modified: 2010-12-17 14:01:11 UTC
Created attachment 176570 [details] [review] fix icon canvas item accessibility since the switch to ginitiallyunowned we need to implement icon canvas item accessibility as an AtkGobjectAccessible.
*** Bug 633145 has been marked as a duplicate of this bug. ***
I pushed to master a different patch, which tries to fix NautilusIconCanvasItem a11y using a more modern ATK approach instead of EelAccessibility functions. Thanks for you patch! The following fix has been pushed: 184096f icon-canvas-item: attempt to fix up a11y for NautilusIconCanvasItem
Created attachment 176591 [details] [review] icon-canvas-item: attempt to fix up a11y for NautilusIconCanvasItem Based on an initial patch by Alban Browaeys <prahal@yahoo.com>.