icon-canvas-item: attempt to fix up a11y for NautilusIconCanvasItem

Based on an initial patch by Alban Browaeys <prahal@yahoo.com>.

https://bugzilla.gnome.org/show_bug.cgi?id=637425